--- a/index.html
+++ b/index.html
@@ -4,23 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Grokking algorithms</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <h1>Testing algorithms</h1>
-  <h2>Chapter I</h2>
-  <h3>Binary search</h3>
-  <form action="">
-    <label for="binary-search">Input list length</label>
-    <input id="input-value-1" type="number" name="" id="binary-search-len">
-    <label for="binary-search">Input number</label>
-    <input id="input-value-2" type="number" name="" id="binary-search-num">
-    <button id="button-chapter-1" type="submit">Search</button>
-  </form>
-  <div id="display-1"></div>
-  <div id="display-2"></div>
-  <div id="display-3"></div>
-  <script src="main.js"></script>
+<body class="index-body">
+  <h1 class="page-title">Testing algorithms</h1>
+  <ul>
+    <li><a class="algorithms-link" href="binary-search.html">Binary search</a></li>
+  </ul>
+
+  </div>
+
 </body>
 
 </html>
