add second algorithm, added modules to js files

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Grokking algorithms</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto+Slab:400,700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="index-body">
   <h1 class="page-title">Testing algorithms</h1>
   <ul>
-    <li><a class="algorithms-link" href="binary-search.html">Binary search</a></li>
+    <li>
+      <a class="algorithms-link" href="binary-search.html">Binary search</a>
+    </li>
+    <li>
+      <a class="algorithms-link" href="sorting-by-choice.html">Sorting by choice</a>
+    </li>
   </ul>
 
   </div>
