--- a/sorting-by-choice.html
+++ b/sorting-by-choice.html
@@ -12,8 +12,8 @@
 <body class="inner-page">
 
   <div class="algorithm">
-    <h1 class="algorithm-title">I. Binary search</h1>
-    <h2 class="algorithm-subtitle">O(log <i>n</i>)</h2>
+    <h1 class="algorithm-title">II. Sorting by choice</h1>
+    <h2 class="algorithm-subtitle">O(<i>n<sup>2</sup></i>)</h2>
     <div class="display-section">
       <div id="display-1" class="display"></div>
       <div id="display-2" class="display"></div>
@@ -21,20 +21,24 @@
       <div id="display-warning" class="display-warning"></div>
     </div>
     <form class="form-section" action="">
-      <label class="form-label" for="input-value-2">Search:</label>
-      <input class="form-input" id="input-value-2" type="number" name="" placeholder="Input number for search">
-      <label class="form-label" for="input-value-1">Items quantity:</label>
+      <label class="form-label" for="input-value-2">Max number:</label>
+      <input class="form-input" id="input-value-2" type="number" name="" placeholder="Min number 1">
+      <label class="form-label" for="input-value-1">Array length:</label>
 
       <input class="form-input" id="input-value-1" type="number" name="" placeholder="Input array length *">
-      <p class="label-description">* it will be created an ordered array with inputted length. Example [0, 1, 2,
-        3,
-        ... , inputted length]</p>
-      <button id="calc-button" class="calc-button" type="submit">Search</button>
+      <p class="label-description">* generate random arrow. Example [0, 52, 32,
+        7,
+        ... , n]</p>
+      <button id="calc-button" class="calc-button" type="submit">Sort</button>
     </form>
   </div>
   <a href="index.html" class="back-button">
     Back to main menu</a>
-  <script src="js/binary-search.js"></script>
+  <div id="screen" class="screen">OUTPUT SCREEN</div>
+
+  <script src="js/sorting-by-choice.js" type="module"></script>
+  <script src="js/elements.js" type="module"></script>
+  <script src="js/makeRandomArray.js" type="module"></script>
 </body>
 
 </html>
