--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Grokking algorithms</title>
+  <title>Algorithms</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto+Slab:400,700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
