--- a/sorting-by-choice.html
+++ b/sorting-by-choice.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Grokking algorithms</title>
+  <title>Algorithms</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto+Slab:400,700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -21,7 +21,7 @@
       <div id="display-warning" class="display-warning"></div>
     </div>
     <form class="form-section" action="">
-      <label class="form-label" for="input-value-2">Max number:</label>
+      <label class="form-label" for="input-value-2">Max array number:</label>
       <input class="form-input" id="input-value-2" type="number" name="" placeholder="Min number 1">
       <label class="form-label" for="input-value-1">Array length:</label>
 
@@ -32,8 +32,7 @@
       <button id="calc-button" class="calc-button" type="submit">Sort</button>
     </form>
   </div>
-  <a href="index.html" class="back-button">
-    Back to main menu</a>
+  <a href="index.html" class="back-button">Back to main menu</a>
   <div id="screen" class="screen">OUTPUT SCREEN</div>
 
   <script src="js/sorting-by-choice.js" type="module"></script>
