--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 <body class="index-body">
   <h1 class="page-title">Testing algorithms</h1>
-  <ul>
+  <ul class="algorithms-list">
     <li>
       <a class="algorithms-link" href="binary-search.html">Binary search</a>
     </li>
     <li>
-      <a class="algorithms-link" href="sorting-by-choice.html">Sorting by choice</a>
+      <a class="algorithms-link" href="sort-by-choice.html">Sorting by choice</a>
+    </li>
+    <li>
+      <a class="algorithms-link" href="quick-sorting.html">Quick sorting</a>
     </li>
   </ul>
 
