--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a class="algorithms-link" href="sort-by-choice.html">Sorting by choice</a>
     </li>
     <li>
-      <a class="algorithms-link" href="quick-sorting.html">Quick sorting</a>
+      <a class="algorithms-link" href="quick-sort.html">Quick sorting</a>
     </li>
   </ul>
 
